# GrafikaProjekt

./: .gitignore  CMakeLists.txt  main.cpp
include/: GUIMyFrame.h  MyFrame.h
src/: GUIMyFrame.cpp  MyFrame.cpp
